# stm32h745i-disco-demo-cmake

./: CMakeLists.txt  README.md  arm-none-eabi-toolchain.cmake  stm32h745.cfg
CM4/: CM4_Release.cfg  CMakeLists.txt  create_objects_list.cmake
CM4/STM32H7xx_HAL_Driver/: stm32h7xx_hal.cyclo  stm32h7xx_hal.d  stm32h7xx_hal.su
CM7/: CM7_Release.cfg  CMakeLists.txt
CM7/Application/Oscillo/Src/: signals_generation.c
CM7/Application/User/Src/: cm4_code.c
Common/: CMakeLists.txt
Drivers/: CMakeLists.txt
